--- a/index.html
+++ b/index.html
@@ -1,42 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Wildbeast</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
 
-</head>
-<body>
-  <div class="estrutura">
-    <header class="header">
-      <a href="#" class="logo"> <img src="./Assents/img/wildbeast.svg" alt="Wildbeast"></a>
-      <nav>
+    <title>Wildbeast</title>
+  </head>
+  <body>
+    <div class="estrutura">
+      <header class="header">
+        <a href="#" class="logo">
+          <img src="./Assents/img/wildbeast.svg" alt="Wildbeast"
+        /></a>
+        <nav>
+          <ul>
+            <li><a href="#">sobre</a></li>
+            <li><a href="#">animais</a></li>
+            <li><a href="#">contato</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <nav class="sidenav">
         <ul>
-          <li><a href="#">sobre</a></li>
-          <li><a href="#">animais</a></li>
-          <li><a href="#">contato</a></li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/cervo.svg" alt="Cervo"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/leao.svg" alt="Leão"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/gato.svg" alt="Gato"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/vaca.svg" alt="Vaca"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/ovelha.svg" alt="Ovelha"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./Assents/img/icones/abelha.svg" alt="Abelha"
+            /></a>
+          </li>
         </ul>
       </nav>
-    </header>
 
-    <nav class="sidenav">
-      <ul>
-        <li><a href="#"> <img src="./Assents/img/icones/cervo.svg" alt="Cervo"></a></li>
-        <li><a href="#"> <img src="./Assents/img/icones/leao.svg" alt="Leão"></a></li>
-        <li><a href="#"> <img src="./Assents/img/icones/gato.svg" alt="Gato"></a></li>
-        <li><a href="#"> <img src="./Assents/img/icones/vaca.svg" alt="Vaca"></a></li>
-        <li><a href="#"> <img src="./Assents/img/icones/ovelha.svg" alt="Ovelha"></a></li>
-        <li><a href="#"> <img src="./Assents/img/icones/abelha.svg" alt="Abelha"></a></li>
-      </ul>
-    </nav>
+      <main class="content">
+        <div class="titulo">
+          <h1>Lobo Cinza</h1>
+          <span>da familia canina lupus</span>
+        </div>
 
-    <main class="content">
+        <div class="caracteristicas">
+          <div>
+            <span class="numero">72</span>
+            <span class="rotulo">Kg</span>
+          </div>
+        </div>
+        <div>
+          <span class="numero">13</span>
+          <span class="rotulo">age</span>
+        </div>
 
-    </main>
+        <p>
+          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
+          cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
+          genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
+        </p>
 
-  </div>
-</body>
+        <img src="Assents/img/wolf1.jpg" alt="Wolf 1" />
+
+        <p>
+          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
+          cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
+        </p>
+
+        <img src="Assents/img/wolf2.jpg" alt="wolf 2" />
+
+        <p>
+          O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a
+          aumentar proporcionalmente com a latitude, como previsto pela teoria
+          de Christian Bergmann. Em geral, a altura, medida a partir dos ombros,
+          varia de 60 a 95 centímetros.
+        </p>
+
+        <p>
+          O peso varia geograficamente. Em média, os lobos europeus pesam 38,5
+          kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes,
+          25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no
+          Alasca, Canadá,[8] e na antiga União Soviética.
+        </p>
+
+        <blockquote class="citacao">
+          <p>
+            “Há algo no uivar do lobo que tira um homem do aqui e agora e o
+            transporta para uma floresta da mente.”
+          </p>
+        </blockquote>
+
+        <ul class="atributos">
+          <li>Surgiu: 12.000 anos</li>
+          <li>Tipo: Mamífero</li>
+          <li>Idade Média: 13 anos</li>
+          <li>Macho adulto: 80kg</li>
+          <li>Fêmea adulta: 55kg</li>
+          <li>Família: Lupus</li>
+        </ul>
+
+        <div class="informacoes">
+          <p>
+            É um sobrevivente da Era do Gelo, originário do Pleistoceno
+            Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e
+            estudos genéticos reafirmam que o lobo cinzento é ancestral do cão
+            doméstico.
+          </p>
+          <p>
+            É um sobrevivente da Era do Gelo, originário do Pleistoceno
+            Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e
+            estudos genéticos reafirmam que o lobo cinzento é ancestral do cão
+            doméstico.
+          </p>
+        </div>
+
+        <img src="Assents/img/wolf3.jpg" alt="Wolf 3" />
+      </main>
+
+      <aside class="anuncios">
+        <div class="anuncio-item">
+          <img src="Assents/img/anuncio-1.jpg" alt="Anuncio 1" />
+        </div>
+
+        <div class="anuncio-item">
+          <img src="Assents/img/anuncio-2.jpg" alt="Anuncio 2" />
+        </div>
+      </aside>
+
+      <footer class="footer">
+        <p>Origamid © 2012 - 2021. Alguns direitos reservados.</p>
+      </footer>
+    </div>
+  </body>
 </html>
