--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
           <span class="rotulo">age</span>
         </div>
 
-        <p>
+        <p class="col-wide">
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
           genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
         </p>
 
-        <img src="Assents/img/wolf1.jpg" alt="Wolf 1" />
+        <img class="imagem-1" src="Assents/img/wolf1.jpg" alt="Wolf 1" />
 
-        <p>
+        <p class="destaque">
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
         </p>
 
-        <img src="Assents/img/wolf2.jpg" alt="wolf 2" />
+        <img class="imagem-2" src="Assents/img/wolf2.jpg" alt="wolf 2" />
 
         <p>
           O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a
@@ -109,7 +109,7 @@
           Alasca, Canadá,[8] e na antiga União Soviética.
         </p>
 
-        <blockquote class="citacao">
+        <blockquote class="citacao col-wide">
           <p>
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
@@ -140,7 +140,7 @@
           </p>
         </div>
 
-        <img src="Assents/img/wolf3.jpg" alt="Wolf 3" />
+        <img class="col-wide" src="Assents/img/wolf3.jpg" alt="Wolf 3" />
       </main>
 
       <aside class="anuncios">
